name:                wreq-json
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sestrella/wreq-json#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastián Estrella
maintainer:          sebas007estrella@gmail.com
copyright:           2016 Sebastián Estrella
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wreq.JSON
  other-modules:       Network.Wreq.JSON.Internal
                       Network.Wreq.JSON.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-client
                     , lens
                     , mtl
                     , text
                     , wreq
  default-language:    Haskell2010

test-suite wreq-json-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.Wreq.JSONSpec
  build-depends:       base
                     , aeson
                     , hspec
                     , mtl
                     , text
                     , wreq-json
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sestrella/wreq-json
